[tool.poetry]
name = "scene-scraper"
version = "0.1.0"
description = "scenescraper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scene_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
graphene-django = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
